@@ -1,4 +1,13 @@
+2010-12-30  Christopher  <chrissitopher@gmx.de>
+
+	* Fixed bug #11779: Unify usage of tooltips in table rows
+
+2010-12-28  Pierre Boivin <pierre.boivin@infoglobe.ca>
+
+	* Fixed bug #11715: Use localized format for date and time
+
 2010-12-06  Pierre Boivin <pierre.boivin@infoglobe.ca>
+
 	* Fixed bug : #11277: Initialize and other methods in modfunc1 could be protected
 	* Fixed bug : #11278: Create an interface for the linktype classes
 	* Fixed bug : #10589: HTTP errors might not be detected (Thanks to Tolleiv Nietsch)
@@ -9,6 +18,7 @@
 	* Fixed bug : #10987: linkvalidator doesn't detect hidden page (Thanks to Joh. Feustel)
 
 2010-12-03  Pierre Boivin <pierre.boivin@infoglobe.ca>
+
 	* Fixed bug : #11271: Lowercase all filenames
 	* Fixed bug : #11280: Refactor class tx_linkvalidator_processing
 	* Fixed bug : #10907: invalid external url not detected
